# vmer

./: .gitignore  README.md  all_prop.txt  checklist.txt  สรุปประชุม_vmer_211111.txt  สรุปประชุม_vmer_220111.txt
desktop/: prob1_cant_use_MSVC_compiler.txt  prob2_qobject_connect_3_overload.txt
desktop/report_pdfviewer/: report_pdfviewer.pro
desktop/resources/: sample_route.json
desktop/vmer_desktop/: CMakeLists.txt  cDB.cpp  cDB.h  cDBDelete.cpp  cDBInsert.cpp  cDBLink.cpp  cDBPrint.cpp  cDBQuery.cpp  cElementProperties.cpp  cElementProperties.h  cModel.cpp  cModel.h  cNewElement.h  cNewElementWindow.cpp  cNewElementWindow.h  cNewElementWindow.ui  cNewMachineWindow.cpp  cNewMachineWindow.h  cNewMachineWindow.ui  cNewModelWindow.cpp  cNewModelWindow.h  cNewModelWindow.ui  cNewProject.h  cNewProject.ui  cNewProjectDialog.cpp  cNewProjectDialogB.cpp  cNewRouteWindow.cpp  cNewRouteWindow.h  cNewRouteWindow.ui  cNewShopWindow.cpp  cNewShopWindow.h  cNewShopWindow.ui  cRoute.cpp  cRoute.h  cnewproject.cpp  main.cpp  mainDisplayTree.cpp  mainNewElementWindow.cpp  mainNewModelWindow.cpp  mainNewProj.cpp  (+8 more)
desktop/vmer_desktop/resources/: resourcesFile.qrc  vmer_sqlite_script.sql
doc/: memo.txt  mysql-init.txt  vmer.sql
element_prop/: cElementProperties.cpp  cElementProperties.h  element_prop.pro  mainwindow.cpp  mainwindow.h  mainwindow.ui
route/route_7/: route_7.json
vmer_db/: main.cpp
vmer_server/: my.js  package-lock.json  run_vmer.js
vsoft/: cDBDelete.cpp  cDBLink.cpp  cDBPrint.cpp  cElementProperties.cpp  cNewElement.cpp  cNewModelWindow.cpp  cNewModelWindow.ui  cNewProjectDialogB.h  cReport.cpp  cReport.h  commonFunction.cpp  mainDisplayTree.cpp  mainNewElementWindow.cpp  mainNewModelWindow.cpp  mainNewRouteWindow.cpp  mainRightClickMenu.cpp  mainwindow.cpp  vsoft.pro
vsoft_desktop/: vsoft_desktop.pro
vsoft_desktop/vsoft/: cDB.cpp  cDBInsert.cpp  cDBLink.cpp  cDBPrint.cpp  cDBQuery.cpp  cDBUpdate.cpp  cElementProperties.h  cHTTPRequest.cpp  cHTTPRequestGUI.cpp  cHTTPRequestGUI.h  cListWidgetItemDevice.h  cModel.h  cNewElement.ui  cNewElementWindow.cpp  cNewElementWindow.ui  cNewModelWindow.h  cNewProjectDialog.ui  cNewRouteWindow.cpp  cNewRouteWindow.ui  cNewShopWindow.h  cReport.cpp  cReport.h  cReportWindow.cpp  cReportWindow.h  cReportWindow.ui  cRoute.cpp  cRoute.h  commonFunction.cpp  commonFunction.h  mainNewMachineWindow.cpp  mainNewProj.cpp  mainNewShopWindow.cpp  mainRightClickMenu.cpp  mainTest.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  vmer_sqlite_script.sql  vsoft.pro  vsoft_resource.qrc
web/: memo.txt
web/http/: cHTTPRequest.cpp  (+7 more)
(+80 files in other folders)
